tests/baselines/reference/commentsMultiModuleMultiFile.errors.txt
commentsMultiModuleMultiFile_0.ts(2,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsMultiModuleMultiFile_0.ts(8,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsMultiModuleMultiFile_1.ts(3,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== commentsMultiModuleMultiFile_1.ts (1 errors) ====
    import m = require('commentsMultiModuleMultiFile_0');
    /** this is multi module 3 comment*/
    export module multiM {
                  ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** class d comment*/
        export class d {
        }
    
        /// class f comment
        export class f {
        }
    }
    new multiM.d();
==== commentsMultiModuleMultiFile_0.ts (2 errors) ====
    /** this is multi declare module*/
    export module multiM {
                  ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /// class b comment
        export class b {
        }
    }
    /** thi is multi module 2*/
    export module multiM {
                  ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** class c comment*/
        export class c {
        }
    
        // class e comment
        export class e {
        }
    }
    
    new multiM.b();
    new multiM.c();
    